<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:textStyle="bold"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/etQuantity"
            android:width="200dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:text="@string/ok" />

    </TableRow>

</TableLayout>