<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/symbol"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_coin_name"
                android:textColor="#A8717171"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_price"
                android:textAlignment="textEnd"
                android:textColor="#A8717171"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/hourly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_hourly_change"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/daily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_daily_change"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/monthly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_monthly_change"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>