<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/defaultPadding">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_is_your_mood"
        android:textColor="?colorPrimary"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginVertical="@dimen/defaultMargin"/>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/imageview_about_your_mood" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_my_mood"/>

</LinearLayout>
