<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultPadding"
        android:stretchColumns="0">
        <TableRow android:layout_marginBottom="@dimen/defaultMargin">

            <TextView
                android:id="@+id/tvCoinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                tools:text="Bitcoin" />
        </TableRow>
        <TableRow android:layout_marginBottom="@dimen/defaultMargin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_rank"
                android:textStyle="italic"
                android:textSize="19sp" />
            <TextView
                android:id="@+id/tvCoinRank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                tools:text="#1"/>
        </TableRow>
        <TableRow android:layout_marginBottom="@dimen/defaultMargin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textStyle="italic"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:textSize="19sp"/>
        </TableRow>
        <TableRow android:layout_marginBottom="@dimen/defaultMargin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fully_diluted_market_cap"
                android:textStyle="italic"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/tvMarketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:textAlignment="textEnd"
                />
        </TableRow>
        <TableRow android:layout_marginBottom="@dimen/defaultMargin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circulating_supply"
                android:textStyle="italic"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/tvCirculatingSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:textSize="19sp"/>
        </TableRow>
        <TableRow android:layout_marginBottom="@dimen/defaultMargin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hourly_volume"
                android:textStyle="italic"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/tvHourlyVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:textSize="19sp"/>
        </TableRow>
        <TableRow android:layout_marginBottom="@dimen/defaultMargin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_change"
                android:textStyle="italic"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/tvHourlyChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:textSize="19sp"/>
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:layout_marginStart="@dimen/defaultMargin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sellButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:backgroundTint="#FF5100"
            android:text="@string/sell"
            android:textSize="22sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/buyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#06CC00"
            android:text="@string/buy"
            android:textSize="22sp"
            app:cornerRadius="8dp" />
    </LinearLayout>
</LinearLayout>
