<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:padding="4dp">
        <TableRow android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin_name"
                android:textStyle="italic"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/coinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                tools:text = "Bitcoin"
                />
        </TableRow>
        <TableRow
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_price"
                android:textStyle="italic"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/tvEntryPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"

                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textColor="?colorPrimary"

                tools:text = "$102,012"/>
        </TableRow>
        <TableRow android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_price"
                android:textStyle="italic"
                android:textAlignment="textEnd"
                android:layout_marginEnd="10dp"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/tvMarketPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:textSize="13sp"

                tools:text = "$112,412.01"/>
        </TableRow>
        <TableRow android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantityRow"
                android:textStyle="italic"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                android:textSize="13sp"
                tools:text = "412,120"/>
        </TableRow>
        <TableRow android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profit"
                android:textStyle="italic"
                android:textSize="13sp"
                />
            <TextView
                android:id="@+id/tvProfit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                tools:text = "$1,000,000,000,000,000"
                />

        </TableRow>


    </TableLayout>

</androidx.cardview.widget.CardView>